style.css
.container {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 80vh;
}

.calculator {
  height: 500px;
  width: 350px;
  border: 2px solid black;
  display: flex;
  flex-direction: column;
  align-items: center;
  row-gap: 25px;
}

.screen {
  display: flex;
  flex-direction: column;
  margin-top: 15px;
  padding-right: 10px;
  height: 20%;
  width: 90%;
  border: 2px solid black;
  background-color: rgb(183, 255, 183);
}

.screen > * {
  height: 50%;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: right;
}

.operations {
  font-size: 25px;
  color: rgb(85, 85, 85);
}

.result {
  font-size: 35px;
}

.buttons {
  height: 80%;
  width: 90%;
  margin-top: 10px;
  display: flex;
  flex-direction: column;
  row-gap: 15px;
}

.buttons > * {
  height: 15%;
  width: 20%;
}

.row {
  display: flex;
  width: 100%;
  column-gap: 10px;
}

.row > * {
  width: 25%;
  border: 1px solid black;
  display: flex;
  align-items: center;
  justify-content: center;
}

.equal {
  width: 50%;
  background-color: rgb(255, 211, 99);
}

.btn-clear {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 22px;
  border: 1px solid black;
  background-color: #fff;
}

.operator {
  background-color: rgb(255, 255, 232);
}

.row > *:hover {
  background-color:#dcffc8;
}

.btn-clear:hover {
  background-color: rgb(255, 236, 63);
}

